# mlc-python

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmake/: CPM.cmake
cmake/Utils/: AddGoogleTest.cmake  AddLibbacktrace.cmake  CxxUtils.cmake  DebugSymbol.cmake  GitVersion.cmake  Library.cmake
cpp/: ast_printer.cc  c_api.cc  c_api_tests.cc  dep_graph.h  dso_loader.h  json.cc  printer.cc  registry.h  structure.cc  traceback.cc  traceback.h  traceback_win.cc
cpp/sym/: analyzer_canonical_simplify.cc  analyzer_canonical_simplify.h  analyzer_const_int_bound.cc  analyzer_const_int_bound.h  analyzer_impl.h  analyzer_interval_set.cc  analyzer_interval_set.h  analyzer_modular_set.cc  analyzer_modular_set.h  analyzer_rewrite_simplify.cc  analyzer_rewrite_simplify.h  analyzer_transitive_comparisons.cc  analyzer_transitive_comparisons.h  sym.cc  text_format.cc  utils.h
include/mlc/: all.h  c_api.h
include/mlc/base/: all.h  alloc.h  any.h  base_traits.h  common.h  lib.h  optional.h  ref.h  traits_device.h  traits_dtype.h  traits_object.h  traits_scalar.h  traits_str.h  utils.h
include/mlc/core/: all.h  dict.h  dict_base.h  error.h  field_visitor.h  func.h  func_details.h  func_traits.h  json.h  list.h  list_base.h  object.h  object_path.h  opaque.h  reflection.h  str.h  structure.h  tensor.h  typing.h  udict.h  udict_base.h  ulist.h  ulist_base.h  utils.h  visitor.h
include/mlc/ffi/: c_api.h  ffi.hpp
include/mlc/ffi/core/: any.h  core.h  object.h  ref.h  traits_device.h  traits_dtype.h  traits_object.h  traits_scalar.h  traits_str.h  utils.h
include/mlc/ffi/ext/: dict.h  error.h  func.h  func_details.h  list.h  str.h  udict.h  udict_base.h  ulist.h  ulist_base.h
include/mlc/printer/: all.h  ast.h  ir_printer.h
include/mlc/sym/: all.h  analyzer.h  expr.h  expr_functor.h  op.h  pattern_match.h
python/mlc/: __init__.py  config.py  device.py  dict.py  dtype.py  error.py  func.py  list.py  object.py
python/mlc/_cython/: __init__.py  base.py  bridge.py  c_class.py  c_struct.py  core.pyx  core_bridge.py  error.py  exception_utils.py  type_info.py
python/mlc/ast/: __init__.py  inspection.py  mlc_ast.py  source.py  translate.py
python/mlc/cc/: __init__.py  compiler.py  jit.py  loader.py
python/mlc/core/: __init__.py  dep_graph.py  device.py  dict.py  dtype.py  error.py  func.py  list.py  object.py  object_path.py  opaque.py  tensor.py  typing.py
python/mlc/dataclasses/: __init__.py  c_class.py  field.py  py_class.py  structure.py  utils.py
python/mlc/parser/: __init__.py  diagnostic.py  env.py  parser.py
python/mlc/printer/: __init__.py  ast.py  cprint.py  ir_printer.py
python/mlc/sym/: __init__.py  _internal.py  analyzer.py  expr.py  op.py
python/mlc/testing/: __init__.py  dataclasses.py
python/mlc/testing/toy_ir/: __init__.py  ir.py  ir_builder.py  parser.py
scripts/: cpp_tests.bat  cpp_tests.sh  setup_manylinux2014.sh  show_wheel_content.py
tests/cpp/: CMakeLists.txt  common.h  test_base_any.cc  test_base_optional.cc  test_base_ref.cc  test_base_type_info.cc  test_core_any.cc  test_core_dict.cc  test_core_func.cc  test_core_list.cc  test_core_ref.cc  test_core_str.cc  test_core_type.cc  test_core_udict.cc  test_core_udict_legacy.cc  test_core_ulist.cc  test_core_ulist_legacy.cc  test_ext_dict.cc  test_ext_func.cc  test_ext_list.cc  test_ext_str.cc  test_ext_udict.cc  test_ext_udict_legacy.cc  test_ext_ulist.cc  test_ext_ulist_legacy.cc  test_sym_pattern.cc
tests/python/: test_cc.py  test_cli_config.py  test_core_dep_graph.py  test_core_device.py  test_core_dict.py  test_core_dtype.py  test_core_func.py  test_core_json.py  test_core_list.py  test_core_object.py  test_core_object_path.py  test_core_opaque.py  test_core_tensor.py  test_core_typing.py  test_cython_traceback.py  test_dataclasses_c_class.py  test_dataclasses_copy.py  test_dataclasses_fields.py  test_dataclasses_prototype.py  test_dataclasses_py_class.py  test_dataclasses_serialize.py  test_dataclasses_structure.py  test_device.py  test_dtype.py  test_func.py  test_list.py  test_nested_type_check.py  test_object.py  test_parser_toy_ir_parser.py  test_pod.py  test_printer_ast.py  test_printer_ir_printer.py  test_reflection.py  test_sym_analyzer_canonical_simplify.py  test_sym_analyzer_const_int_bound.py  test_sym_analyzer_interval_set.py  test_sym_analyzer_modular_set.py  test_sym_analyzer_rewrite_simplify.py  test_sym_analyzer_simplify.py  test_sym_expr.py  (+2 more)
